# MyPlatformer

./: .gitmodules  CMakeLists.txt
game/: CMakeLists.txt
game/include/Game/: Enemy.h  Floor.h  GameOver.h  Level.h  Obstacle.h  Player.h
game/src/: Enemy.cpp  Floor.cpp  GameOver.cpp  Level.cpp  Obstacle.cpp  Player.cpp  main.cpp
levels/: level1.json  level2.json
shaders/: basic.frag  basic.vert
